public/css/main.css
html {
}

body {
}

.marquee {
    width: 90%;
    white-space: nowrap;
}

/**
 * Scrollbar
 */
::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}
::-webkit-scrollbar-thumb {
    background: #666;
    border-radius: 10px;
}
::-webkit-scrollbar-thumb:hover {
    background: #aaa;
}
::-webkit-scrollbar-track {
    background: #111111;
    border-radius: 10px;
}

.modal-backdrop {
    z-index: 998;
}

.modal-header > button {
    color: #ddd;
}

.modal-header > button:hover {
    color: white;
}

.modal-content {
    background-color: #111;
    border: 1px solid #333;
}

.modal-header,
.modal-footer {
    border: 0;
}

body,
.table {
    color: #fff;
}

body,
.bg-dark {
    background-color: #111 !important;
}

#soprano {
    color: white;
    background-color: #111;
    height: 100%;
    padding-bottom: 100px;
}

main {
    height: calc(100vh - 67px);
}

.content {
    width: 100%;
    padding: 0 10px 20px 10px;
    margin: 0 auto;
    overflow-y: auto;
    overflow-x: hidden;
}

.content h1 {
    font-size: 2rem;
}

a:link,
a:visited {
    color: #ffffff;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
    text-decoration: none;
    cursor: pointer;
    display: inline-block;
}

a:hover,
a:active {
    color: springgreen;
}

ul.navbar-nav a {
    color: #666;
}

#navbarSupportedContent > ul.navbar-nav.ml-auto > li {
    text-align: right !important;
}

li.navbar-item:hover {
    cursor: pointer;
}

ul.navbar-nav a:hover {
    color: #222;
}

#sidebar > ul.navbar-nav li.navbar-item {
    padding: 5px 0;
}

#sidebar > ul.navbar-nav li.navbar-item {
    color: #888;
}

#sidebar > ul.navbar-nav li.navbar-item:hover {
    color: #fff;
}

.btn-link:hover {
    color: springgreen;
}

.card {
    background-color: #111;
    color: white;
    border-color: #666;
}

.music-note {
    filter: invert(1);
}

.navbar-brand {
    font-size: 1.8em;
}

.navbar-brand > img {
    height: 25px;
}

.container-fluid {
    padding: 0 8px !important;
}

/**
 * Player
 */
#player {
    background-color: #222;
    height: 100px;
    width: 100%;
    z-index: 999;
    position: absolute;
    bottom: 0;
    overflow: hidden;
}

#player-cont {
    padding-top: 2px;
}

#player-cover-art {
    height: 100px;
}

#player-cover-art:hover {
    cursor: pointer;
}

.player-btn {
    margin-top: 3px;
    font-size: 1.3em;
    color: #888;
}

.player-btn:hover {
    color: #fff;
}

#player-controls > button {
    margin-right: 15px;
}

#player-album {
    padding-left: 10px;
    padding-top: 4px;
}

#player-artist-title {
    padding-left: 10px;
}
.action-col {
    text-align: right;
    width: 1%;
}

.progress {
    width: 100%;
    position: absolute;
    bottom: 100px;
    height: 5px;
}
#progress {
    width: 100%;
    z-index: 9990;
}

.table {
    width: 100%;
}

.truncate {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#directories {
    margin-top: 20px;
}

.dir-path {
    line-height: 32px;
    font-size: 1.1em;
}

.dir-path:hover {
    background-color: #222;
}

.scan-progress {
    background-color: #222;
    margin-top: 10px;
    margin-right: 8px;
}

.help-text {
    padding: 6px;
    font-size: 0.8em;
    color: #999;
}
.directory-actions > button {
    margin-right: 6px;
}

/**
 * Podcasts
 */
#listennote {
    height: 12px;
}
.podcast-cover {
    width: 100px;
    height: 100px;
}

.underline {
    text-decoration: underline;
}

.cursor {
    color: #ccc;
}

.cursor:hover {
    cursor: pointer;
    color: #fff;
}

.podcast-details {
    max-height: 200px;
    overflow-y: auto;
}

.podcast-details h4 {
    font-size: 1.3em;
}

.podcast-details h5 {
    font-size: 1.1em;
}

/**
 * Search
 */
.resultRow {
    padding-top: 4px;
}
.resultRow:hover {
    background-color: #222;
    cursor: pointer;
}
.search-album-cover {
    height: 24px;
}
.search-row-cover {
    margin-right: 10px;
}
.search-row-title {
    font-size: 1.2em;
    line-height: 40px;
}
.search-row-playtime-string {
    line-height: 40px;
}
.dropright > .dropdown-toggle {
    color: #666;
}
.dropright > .dropdown-toggle:hover {
    color: #fff;
}
.grid-icon:hover {
    cursor: pointer;
}

.dropright a:link,
.dropright a:visited {
    color: #555;
}

.dropright a:link:hover,
.dropright a:visited:hover {
    color: #222;
}

/**
 * Loading
 */
.sweet-loading {
    padding: 20px 0;
}

.sweet-loading > * {
    margin: 0 auto;
}

/**
 * Sidebar
 */
#sidebar {
    width: 190px;
    min-width: 190px;
    padding-top: 2px;
    padding-left: 22px;
    background-color: #111;
}

#sidebar .navbar-item {
    font-size: 1.3em;
}
#sidebar-playlist-cont {
    height: 40vh;
    overflow-y: auto;
}

.playlist-name {
    max-width: 100px;
}

/**
 * Playlists
 */
#tbl-playlists tr:hover {
    background-color: #222;
}

@media (max-width: 575.98px) {
}

@media (max-width: 767.98px) {
    #sidebar {
        width: 75px;
        min-width: 75px;
        text-align: center;
        padding-left: 0;
    }
    .sidebar-icon {
        margin-right: 0 !important;
    }
    .navbar {
        margin: 0;
        padding: 0 16px;
    }
    .grid-icon {
        height: 85px !important;
        width: 85px !important;
    }
    .link-toggle {
        display: none;
    }
    #sidebar > ul.navbar-nav li.navbar-item span {
        padding: 8px 0;
    }
    .navbar-brand img {
        padding-left: 0;
        height: 28px;
    }
    .navbar-brand span {
        display: none;
    }
}

@media (max-width: 991.98px) {
}

